<resources>
    <string name="app_name">Coffee Shop Simulator</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_menu">Menu</string>
    <string name="order_coffee">Choose an Item</string>
    <string name="order_coffee1">Place an Order</string>
    <string name="black_coffee">Black Coffee</string>
    <string name="latte">Latte</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="choose_size">Choose Size</string>
    <string name="caffeine">Are you sure you want to place an order?\n\n\n\nSwipe LEFT for caffeine!\n\n\n\nSwipe RIGHT to cancel :(</string>
    <string name="order_butt">Order</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Time</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Drink</string>
    <string name="pickup_date">Pickup time</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="order_details">Size: %2$s \nPickup date: %3$s \nTotal: %4$s \n\nThank you!</string>
    <string name="my_order_history">Find A Shop</string>
    <string name="my_rewards">My Rewards</string>
    <string name="check_payment_methods">Check Payment Methods</string>
    <string name="wallet">wallet</string>
    <string name="my_wallet">Welcome to our shop! Please enjoy!</string>
    <string name="choose_coffee">Coffee Goods</string>
    <string name="choose_baking">Start Order</string>
    <string name="coffees">Coffees</string>
    <string name="baking_goods">Baking Goods</string>
    <string name="beans">Beans</string>
    <string name="black_coffee_description"><b>Black Coffee</b>\nS: $2.00\nM: $3.00\nL: $3.50</string>
    <string name="cappuccino_description"><b>Cappuccino</b>\nS: $3.50\nM: $5.25\nL: $6.12</string>
    <string name="latte_description"><b>Latte</b>\nS: $3.00\nM: $4.50\nL: $5.25</string>
    <string name="latte_indicator">This is a latte</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="size">Size</string>
    <string name="new_coffee_order">New Coffee Order</string>
    <string name="menu_heading">Check out our delicious coffee!</string>
    <string name="title_activity_maps">Wander</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="zoom">15f</string>
    <string name="click_prompt">Click on the images for some coffee fun!</string>
    <string name="right_arrow_description">Right Arrow for Cancel</string>
    <string name="left_arrow_description">Left Arrow for Continue</string>
    <string name="swipe_left_text">Swipe left to place your order!</string>
    <string name="swipe_right_text">Swipe right to cancel :(</string>
    <string name="return_home">Return Home</string>
    <string name="latte_desc">Cappuccino\nSmall: $3.00\nMedium: $4.50\nLarge: $5.25</string>
    <string name="choose_pickup_time">Choose Pickup Time</string>


</resources>