<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.coffeeshopprototype.StartFragment"
        android:label="@string/order_coffee1"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_sizeFragment"
            app:destination="@id/sizeFragment" />
    </fragment>
    <fragment
        android:id="@+id/sizeFragment"
        android:name="com.example.coffeeshopprototype.SizeFragment"
        android:label="@string/choose_size"
        tools:layout="@layout/fragment_size">
        <action
            android:id="@+id/action_sizeFragment_to_pickupFragment"
            app:destination="@id/pickupFragment" />
        <action
            android:id="@+id/action_sizeFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.example.coffeeshopprototype.PickupFragment"
        android:label="@string/choose_pickup_date"
        tools:layout="@layout/fragment_pickup">
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_pickupFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.coffeeshopprototype.SummaryFragment"
        android:label="@string/order_summary"
        tools:layout="@layout/fragment_summary">
        <action
            android:id="@+id/action_summaryFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_summaryFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.coffeeshopprototype.ui.order.OrderFragment"
        android:label="@string/order_coffee1"
        tools:layout="@layout/fragment_order" />
</navigation>