<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="-30sp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/menu_heading"
                android:textAlignment="center"
                android:textColor="@color/brown_700"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/click_prompt"
                android:textAlignment="center"
                android:textColor="@color/brown_700"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/black_coffee"
                android:layout_width="@dimen/image_size"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/black_coffee"
                android:scaleType="centerInside"
                android:src="@drawable/black_coffee"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="315dp"
                android:onClick="rotator1"/>

            <TextView
                android:id="@+id/text_menu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/black_coffee_description"
                android:textAlignment="viewStart"
                android:textColor="@color/brown_700"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/latte"
                android:layout_width="@dimen/image_size"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/latte"
                android:scaleType="centerInside"
                android:src="@drawable/latte"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="315dp"
                android:onClick="rotator2"/>

            <TextView
                android:id="@+id/text_menu"
                android:layout_height="1dp"
                android:layout_width="1dp"/>

            <TextView
                android:id="@+id/text_menu4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/latte_description"
                android:textAlignment="viewStart"
                android:textColor="@color/brown_700"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cappuccino"
                android:layout_width="@dimen/image_size"
                android:layout_height="227dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/cappuccino"
                android:scaleType="centerInside"
                android:src="@drawable/cappuccino"
                tools:ignore="ImageContrastCheck"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="315dp"
                android:onClick="rotator3"/>

            <TextView
                android:id="@+id/text_menu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:paddingBottom="40dp"
                android:text="@string/cappuccino_description"
                android:textAlignment="viewStart"
                android:textColor="@color/brown_700"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>